--- a/model/EDA/EDA.ipynb
+++ b/model/EDA/EDA.ipynb
@@ -26,96 +26,28 @@
     "# EDA (Exploratory data analysis)\n",
     "## For \"Fake News\" dataset\n",
     "### Developed by: Sebastián Marroquín\n",
-    "***"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
-    "### 1. Importing the necessary libraries"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "plt.style.use('ggplot')\n",
-    "import seaborn as sns\n",
-    "import nltk\n",
-    "import re\n",
-    "from wordcloud import WordCloud\n",
-    "import os"
-   ]
-  },
-  {
-   "source": [
-    "### 2. Load the dataset\n",
     "\n",
-    "In this section we load the dataset into a dataframe to perform the data analysis.\n",
-    "The data set that we use for this analysis is the one that we can find within the following link: \n",
-    "[Fake or Real News](https://s3.amazonaws.com/assets.datacamp.com/blog_assets/fake_or_real_news.csv)\n"
+    "***\n",
+    "\n",
+    "### Tasks to do\n",
+    "\n",
+    "1. Import the necessary libraries\n",
+    "2. Load the dataset\n",
+    "    - Verify if the data contained in the data set are necessary to perform an analysis, if not, correct them.\n",
+    "3. Obtain and visualize the different types of news contained within the data set\n",
+    "    - Graph these types of news\n",
+    "4. WordCloud\n",
+    "\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df = pd.read_csv('Fake.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "                                               title  \\\n",
-       "0   Donald Trump Sends Out Embarrassing New Year’...   \n",
-       "1   Drunk Bragging Trump Staffer Started Russian ...   \n",
-       "2   Sheriff David Clarke Becomes An Internet Joke...   \n",
-       "3   Trump Is So Obsessed He Even Has Obama’s Name...   \n",
-       "4   Pope Francis Just Called Out Donald Trump Dur...   \n",
-       "\n",
-       "                                                text subject  \\\n",
-       "0  Donald Trump just couldn t wish all Americans ...    News   \n",
-       "1  House Intelligence Committee Chairman Devin Nu...    News   \n",
-       "2  On Friday, it was revealed that former Milwauk...    News   \n",
-       "3  On Christmas day, Donald Trump announced that ...    News   \n",
-       "4  Pope Francis used his annual Christmas Day mes...    News   \n",
-       "\n",
-       "                date  \n",
-       "0  December 31, 2017  \n",
-       "1  December 31, 2017  \n",
-       "2  December 30, 2017  \n",
-       "3  December 29, 2017  \n",
-       "4  December 25, 2017  "
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>title</th>\n      <th>text</th>\n      <th>subject</th>\n      <th>date</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Donald Trump Sends Out Embarrassing New Year’...</td>\n      <td>Donald Trump just couldn t wish all Americans ...</td>\n      <td>News</td>\n      <td>December 31, 2017</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Drunk Bragging Trump Staffer Started Russian ...</td>\n      <td>House Intelligence Committee Chairman Devin Nu...</td>\n      <td>News</td>\n      <td>December 31, 2017</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Sheriff David Clarke Becomes An Internet Joke...</td>\n      <td>On Friday, it was revealed that former Milwauk...</td>\n      <td>News</td>\n      <td>December 30, 2017</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Trump Is So Obsessed He Even Has Obama’s Name...</td>\n      <td>On Christmas day, Donald Trump announced that ...</td>\n      <td>News</td>\n      <td>December 29, 2017</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Pope Francis Just Called Out Donald Trump Dur...</td>\n      <td>Pope Francis used his annual Christmas Day mes...</td>\n      <td>News</td>\n      <td>December 25, 2017</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 3
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
+   "source": []
   }
  ]
 }
