--- a/fakeNewsModels/NLP/NLP_FakeNews.ipynb
+++ b/fakeNewsModels/NLP/NLP_FakeNews.ipynb
@@ -7,7 +7,8 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOEMy93gwiBgjvF8EkMpuQF",
+      "mount_file_id": "https://github.com/SebastianMM-96/fake-news/blob/main/fakeNewsModels/NLP/NLP_FakeNews.ipynb",
+      "authorship_tag": "ABX9TyMFi+Lgbqtst93pEcNRf9e2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +50,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gNUVNI2q3c8o"
+        "id": "gNUVNI2q3c8o",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c9d3a046-e8bd-443c-8431-b147f8bc3446"
       },
       "source": [
         "# librerías básicas\r\n",
@@ -79,10 +84,21 @@
         "from sklearn.feature_extraction.text import CountVectorizer\r\n",
         "from sklearn.naive_bayes import MultinomialNB\r\n",
         "from sklearn.metrics import accuracy_score, confusion_matrix\r\n",
-        "from sklearn.metrics import classification_report"
+        "from sklearn.metrics import classification_report\r\n",
+        "\r\n",
+        "from google.colab import drive\r\n",
+        "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -100,14 +116,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4PLtvOYw4ULG",
-        "outputId": "6d0795bc-8981-45dc-80a1-5ee5145729c3"
+        "outputId": "e066faa7-e3a7-4f43-f7c1-0863a6c28323"
       },
       "source": [
         "print('Importando el conjunto de datos...')\r\n",
-        "data = pd.read_csv('/content/data/fake_or_real_news.csv')\r\n",
+        "data = pd.read_csv('/content/drive/MyDrive/fake-news-datasets/Datacamp/fake_or_real_news.csv')\r\n",
         "print('Listo')"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,12 +151,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DFOHdAPI4rfc",
-        "outputId": "120bdf8c-8ad9-4e4e-fe93-32f82c05a8d7"
+        "outputId": "46d06756-a4dd-4647-85d0-473f413b76c6"
       },
       "source": [
         "print('Forma del conjunto de datos: {}'.format(data.shape))"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,12 +184,12 @@
           "height": 359
         },
         "id": "GTUZJsYX42Bh",
-        "outputId": "9cd9839d-9415-4c45-e0b0-05ea35e4c6a7"
+        "outputId": "87f4f95f-c57d-4135-abcb-dcb69e3842b6"
       },
       "source": [
         "data.head(10)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -318,12 +334,12 @@
           "height": 450
         },
         "id": "OOGisqi54996",
-        "outputId": "66ddc228-eb90-487d-f9d8-d5fe77bb4553"
+        "outputId": "613e7909-1c7d-45c4-9f52-17095056d20d"
       },
       "source": [
         "data.set_index('Unnamed: 0')"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -472,12 +488,12 @@
           "height": 359
         },
         "id": "JVV-vf7z5J5S",
-        "outputId": "b4ff6a59-3cc9-49c5-ef27-cd90cbc4095e"
+        "outputId": "810a5197-4af5-4095-ea7d-b2c07f4dbb27"
       },
       "source": [
         "data.head(10)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -631,7 +647,7 @@
       "source": [
         "y = data.label"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -651,12 +667,12 @@
           "height": 419
         },
         "id": "ssjbs4K15f6f",
-        "outputId": "48636deb-4253-434b-ff52-ae34a3bac744"
+        "outputId": "19a1efab-99e9-448b-a86d-c60b8cfea120"
       },
       "source": [
         "data.drop('label', axis=1)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -798,7 +814,7 @@
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(data['text'], y, test_size=0.33, random_state=53)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -834,7 +850,7 @@
         "# Transformacion del conjunto de prueba\r\n",
         "count_test = count_vec.transform(X_test)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -861,7 +877,7 @@
         "# Transformar el conjunto de pruebas\r\n",
         "tfidf_test = tfidf_vec.transform(X_test)"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -880,12 +896,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lrHb1rLB6wzS",
-        "outputId": "bbc1e065-f695-4cf8-c4d0-a0d06fe8411e"
+        "outputId": "629834c5-040e-4479-9da8-7813cd9fa0a6"
       },
       "source": [
         "print(\"Tf-idf: {}\".format(tfidf_vec.get_feature_names()[-10:]))"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -903,12 +919,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YuK0m_gK6-5u",
-        "outputId": "46c79369-79a6-4159-cdcd-f25c67044e39"
+        "outputId": "c0d05fb0-303a-4119-97a9-0b132eef96c4"
       },
       "source": [
         "print(\"CountVectorizer: {}\".format(count_vec.get_feature_names()[-10:]))"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -971,7 +987,7 @@
         "    plt.ylabel('True label')\r\n",
         "    plt.xlabel('Predicted label')"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -992,7 +1008,7 @@
         "# Definiremos el clasificador dentro de una variable\r\n",
         "clf_tfidf = MultinomialNB()"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -1003,7 +1019,7 @@
           "height": 345
         },
         "id": "ZCiDd9Zi79yQ",
-        "outputId": "3017ad9f-8427-4c71-8fc1-e4f183b38a4f"
+        "outputId": "a0913ed6-e2b1-4f6d-924c-85dc835c1c98"
       },
       "source": [
         "clf_tfidf.fit(tfidf_train, y_train)\r\n",
@@ -1019,7 +1035,7 @@
         "# Graficar\r\n",
         "plot_confusion_matrix(cm_tfidf, classes=['FAKE', 'REAL'])"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1051,13 +1067,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rsfBqiGy8mJC",
-        "outputId": "cc087156-fd74-4bf5-f095-12eeae0da970"
+        "outputId": "584a0a40-c2c0-49d2-ea79-16299a5262da"
       },
       "source": [
         "# Metricas de rendimiento\r\n",
         "print(classification_report(y_test, pred_tfidf))"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -1094,7 +1110,7 @@
         "# Definiremos el clasificador dentro de una variable\r\n",
         "clf_countVec = MultinomialNB()"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -1105,7 +1121,7 @@
           "height": 345
         },
         "id": "is2xHw198aXP",
-        "outputId": "efc44783-42ef-4987-9ae2-94526f60db00"
+        "outputId": "c53c20d3-52f7-477b-c91d-895600561a96"
       },
       "source": [
         "clf_countVec.fit(count_train, y_train)\r\n",
@@ -1121,7 +1137,7 @@
         "# Plot the confusion matrix\r\n",
         "plot_confusion_matrix(cm_countVec, classes=['FAKE', 'REAL'])"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -1153,13 +1169,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qA9lClG48fvL",
-        "outputId": "abb1e402-0be9-4f47-a327-7679f3021cc8"
+        "outputId": "36e8f1af-f225-469d-ba95-c65b06866d5d"
       },
       "source": [
         "# Metricas de rendimiento\r\n",
         "print(classification_report(y_test, pred_countVec))"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -1195,7 +1211,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     }
   ]
