--- a/fake-news-models/fake_news_classifier.ipynb
+++ b/fake-news-models/fake_news_classifier.ipynb
@@ -10,7 +10,7 @@
       ],
       "toc_visible": true,
       "mount_file_id": "1GNZu87wSa-0YY-GQ8sdwtl2gvUmDxTC7",
-      "authorship_tag": "ABX9TyMIZwhJg+IVQMDsA7z5cWKe",
+      "authorship_tag": "ABX9TyOD4CyJSqUpZyJ+bTcOAA+x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
         "id": "_-vYDd88yNO3"
       },
       "source": [
-        "# [1. Librerías](#parte1)"
+        "# 1. Librerías <a class=\"anchor\" id=\"parte1\"></a>"
       ]
     },
     {
